<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.adjectitious.android.petrolpatrol.AddEntry"
    android:orientation="vertical">

    <include
        android:layout="@layout/main_toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"/>

    <TextView android:id="@+id/text_fields_errors"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:singleLine="false"
        android:maxLines="5"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText android:id="@+id/text_date_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:focusable="false"
            android:hint="@string/text_date"
            android:inputType="date" />

        <TextView android:id="@+id/text_date_edit_checkbox_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_date_edit_checkbox_text" />

        <CheckBox android:id="@+id/text_date_edit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:checked="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="onCheckBoxToggle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Spinner android:id="@+id/spinner_name"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="visible" />

        <EditText android:id="@+id/text_name_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:padding="15dp"
            android:visibility="gone"
            android:hint="@string/text_name" />

        <TextView android:id="@+id/text_name_edit_checkbox_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_name_edit_checkbox_text" />

        <CheckBox android:id="@+id/text_name_edit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:checked="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="onCheckBoxToggle" />
    </LinearLayout>

    <EditText android:id="@+id/text_price_edit"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:padding="15dp"
        android:hint="@string/text_price"
        android:inputType="numberDecimal" />

    <EditText android:id="@+id/text_gallons_edit"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:padding="15dp"
        android:hint="@string/text_gallons"
        android:inputType="numberDecimal" />

    <EditText android:id="@+id/text_mileage_edit"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:padding="15dp"
        android:hint="@string/text_mileage"
        android:inputType="number" />

    <Button android:id="@+id/add_entry_submit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_entry_submit_button"
        android:onClick="submitEntry" />

</LinearLayout>
